--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -8,10 +8,9 @@
   </swiper>
 
   <!--热门商家推荐-->
-  <view style="flex-direction:row;">
+  <view style="flex-direction:row;margin-top:50rpx;">
     <block wx:for="{{hotIconList}}" wx:key="hotIcon">
-      <view style="width:178rpx; height:208rpx;" hover="true">
-        <image src="{{item.img}}" style="width:178rpx; height:208rpx;" />
+      <view style="width:178px; height:208px;background-image: url('{{item.img}}');" hover="true">
         <text>{{item.title}}</text>
       </view>
     </block>
