--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,8 +1,8 @@
 <scroll-view>
   <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}">
     <block wx:for="{{imgUrls}}" wx:key="imgUrl">
-      <swiper-item>
-        <image src="{{item}}" class="slide-image" mode="widthFix" />
+      <swiper-item bindtap="{{item.tap}}">
+        <image src="{{item.img}}" class="slide-image" mode="widthFix" />
       </swiper-item>
     </block>
   </swiper>
