--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,4 @@
-<scroll-view>
+<scroll-view class="container">
   <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}">
     <block wx:for="{{imgUrls}}" wx:key="imgUrl">
       <swiper-item bindtap="{{item.tap}}">
@@ -8,10 +8,11 @@
   </swiper>
 
   <!--热门商家推荐-->
-  <view style="flex-direction:row;margin-top:50rpx;">
+  <view class="hot-container">
     <block wx:for="{{hotIconList}}" wx:key="hotIcon">
-      <view style="width:178px; height:208px;background-image: url('{{item.img}}');" hover="true">
-        <text>{{item.title}}</text>
+      <view class="item-container">
+        <image class="item-image" src="{{item.img}}"></image>
+        <text class="item-text">{{item.title}}</text>
       </view>
     </block>
   </view>
