--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,3 +1,34 @@
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
 .slide-image {
     width: 100%
+}
+
+.hot-container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50rpx;
+    flex-wrap: wrap;
+}
+
+.item-container {
+    display: flex;
+    flex-direction: column;
+    width: 150rpx;
+    height: 180rpx;
+}
+
+.item-image {
+    width: 120rpx;
+    height: 120rpx;
+    padding-left: 15rpx;
+}
+
+.item-text {
+    font-size: 12px;
+    text-align: center;
+    line-height: 50rpx;
 }
