--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,34 +1,57 @@
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .slide-image {
-    width: 100%
+  width: 100%;
 }
 
 .hot-container {
-    display: flex;
-    flex-direction: row;
-    margin-top: 50rpx;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  margin-top: 50rpx;
+  flex-wrap: wrap;
+}
+
+.common-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .item-container {
-    display: flex;
-    flex-direction: column;
-    width: 150rpx;
-    height: 180rpx;
+  display: flex;
+  flex-direction: column;
+  width: 150rpx;
+  height: 180rpx;
 }
 
 .item-image {
-    width: 120rpx;
-    height: 120rpx;
-    padding-left: 15rpx;
+  width: 120rpx;
+  height: 120rpx;
+  padding-left: 15rpx;
 }
 
 .item-text {
-    font-size: 12px;
-    text-align: center;
-    line-height: 50rpx;
+  font-size: 12px;
+  text-align: center;
+  line-height: 50rpx;
+}
+
+.image-line {
+  width: 750rpx;
+  height: 24rpx;
+}
+
+.image-hidden-view {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-content: center;
+}
+
+.image-hidden-btn {
+  width: 30rpx;
+  height: 30rpx;
 }
