--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  background-color: #ffffff;
 }
 
 .slide-image {
@@ -48,10 +49,14 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  align-content: center;
+  align-items: center;
 }
 
 .image-hidden-btn {
   width: 30rpx;
   height: 30rpx;
+}
+
+.hide {
+  display: none;
 }
