--- a/pages/home/mobile/pay.wxss
+++ b/pages/home/mobile/pay.wxss
@@ -1,1 +1,115 @@
 /* pages/home/mobile/pay.wxss */
+
+.container {
+  background-color: #f0f0f0;
+}
+
+.mobilepay-image {
+  width: 100%;
+  height: 140rpx;
+}
+
+.swiper-tab {
+  width: 100%;
+  border-bottom: 1rpx solid #ccc;
+  text-align: center;
+  height: 60rpx;
+  line-height: 60rpx;
+  font-family: "Microsoft Yahei";
+}
+
+.swiper-tab-item {
+  display: inline-block;
+  width: 50%;
+  color: #6d6d6d;
+}
+
+.active {
+  color: #41b049;
+  border-bottom: 4rpx solid #41b049;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  background-color: #f0f0f0;
+  height: 100%;
+}
+
+.mobile-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 100rpx;
+  background-color: #fff;
+  margin-top: 50rpx;
+  border-top: 4rpx solid #dfdfdf;
+  border-bottom: 4rpx solid #dfdfdf;
+}
+
+.mobile-text {
+  font-family: "Microsoft Yahei";
+  padding-left: 50rpx;
+  padding-right: 50rpx;
+  color: #a6a6a6;
+}
+
+.mobile-location {
+  margin-top: 20rpx;
+  margin-left: 50rpx;
+  font-size: 30rpx;
+  font-family: "Microsoft Yahei";
+  color: #5c5c5c;
+}
+
+.price-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 30rpx;
+}
+
+.price-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 201rpx;
+  height: 134rpx;
+  border: 2rpx solid #ccc;
+  margin: 21rpx;
+  border-radius: 30rpx;
+  background-color: #fff;
+}
+
+.price-active {
+  border-color: #41b049;
+}
+
+.price-title {
+  font-family: "Microsoft Yahei";
+  font-weight: bold;
+  font-size: 40rpx;
+  margin-top: 20rpx;
+}
+
+.price {
+  font-family: "Microsoft Yahei";
+  font-size: 25rpx;
+  margin-top: 10rpx;
+}
+
+.submit-btn {
+  width: 650rpx;
+  height: 100rpx;
+  text-align: center;
+  background-color: #41b049;
+  margin: 50rpx;
+  border-radius: 10rpx;
+}
+
+.submit-text {
+  color: white;
+  font-family: "Microsoft Yahei";
+  line-height: 100rpx;
+}
